@@ -1,5 +1,8 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
+next:
+          - support reading action_menu_items from file
+
 2.08     Fri May  6 11:29:14 CEST 2016
           - add status column to performance map excel export
           - accept filter changes on body clicks too
